source/components/Form/assets/radio.scss
@import '../../../assets/styles/tools';

/* ==========================================================================
   FORM RADIO BUTTON
   ========================================================================== */
.f-radio {
  @include o-btn;
  width: 100%;
  border-color: transparent;
  padding: spacing(1/2);
  background-color: color(light);
  color: rgba(color(dark), .6);
  fill: rgba(color(dark), .3);

  &:hover {
    background-color: rgba(color(light, dark), .5);
  }

  &.has-icon {
    padding: spacing(1/3);

    > .c-thumbnail {
      width: spacing(3);
      margin: 0 auto;
    }

    > .f-radio__text {
      @include font-scale(-2);
    }
  }
}





/* ELEMENTS
   ========================================================================== */
.f-radio__text {
  display: block;
  @include type-scale(0);
  text-transform: initial;
}





/* STATES
   ========================================================================== */
:focus {
  & ~ .f-radio {
    background-color: rgba(color(light, dark), .5);
    box-shadow: $shadow-size rgba(color(brand, light), .15);
  }
}

:checked {
  & ~ .f-radio {
    background-color: color(brand);
    fill: color(brand, xdark);
    color: white;
  }
}

